# lectures-701

./: .gitignore  CMakeLists.txt
arrays/simple_arrays/: main.c
arrays/simple_strings/: main.c
celsius/: main.c
datatypes/: CMakeLists.txt  main.c
decisions/calculator/: main.c
decisions/evenly_divisible/: main.c
decisions/simple_decisions/: main.c
functions/arrays/: main.c
functions/math_functions/: main.c
functions/scope/: main.c
functions/static/: main.c
intro/conversions/: main.c
intro/datatypes/: main.c
intro/evenly_divisible/: main.c
intro/polynomial/: main.c
intro/scientific_notation/: main.c
intro/test_char/: test_char.c
loops/digit_sum/: main.c
loops/incrementer/: main.c
loops/squares/: main.c
loops/triangular/: main.c
memory/complex_array/: main.c
memory/linked_list/: main.c
memory/simple_array/: main.c
memory/simple_malloc/: main.c
pointers/simple_pointer/: main.c
strings/string_functions/: main.c
strings/substrings/: main.c
structures/datetime/: main.c
